--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Web</title>
+    <title>B-FlixMovie</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-..." crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="script.js" defer></script>
 </head>
 
 <body>
@@ -69,8 +70,6 @@
             <div class="modal-content" id="modalContent"></div>
         </div>
     </div>
-
-    <script type="module" src="script.js"></script>
-</body>
-
+    
+</body> 
 </html>
