--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B-FlixMovie</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-        integrity="sha512-..." crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <script type="module" src="script.js" defer></script>
 </head>
 
 <body>
@@ -27,7 +25,7 @@
                     <input type="password" id="loginPassword" placeholder="Nhập mật khẩu"
                         onkeypress="if(event.key==='Enter') window.login()">
                 </div>
-                <button class="btn btn-primary" onclick="window.login()" style="width: 100%;">Đăng nhập</button>
+                <button class="btn btn-primary" style="width: 100%;">Đăng nhập</button>
             </div>
         </div>
     </div>
@@ -70,6 +68,6 @@
             <div class="modal-content" id="modalContent"></div>
         </div>
     </div>
-    
+    <script type="module" src="script.js"></script>
 </body> 
 </html>
