--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                     <button id="ordersBtn" onclick="window.showOrders()">Đơn hàng</button>
                     <button id="adminBtn" onclick="window.showAdmin()" style="display: none;">Quản lý</button>
                     <div
-                        style="display: flex; align-items: center; gap: 1rem; margin-left: 1rem; padding-left: 1rem; border-left: 2px solid rgba(233, 69, 96, 0.3);">
-                        <span id="userDisplay" style="color: #f39c12; font-weight: bold;"></span>
-                        <button onclick="window.logout()" style="background: rgba(231, 76, 60, 0.3);">Đăng xuất</button>
+                        style="display: flex; align-items: center; gap: 1rem; margin-left: 1rem; padding-left: 1rem; border-left: 2px solid var(--cold-border)">
+                        <span id="userDisplay" style="color: var(--cold-border); font-weight: bold;"></span>
+                        <button onclick="window.logout()" style="background: var(--cold-main);">Đăng xuất</button>
                     </div>
                 </div>
             </nav>
