--- a/index.html
+++ b/index.html
@@ -68,6 +68,22 @@
             <div class="modal-content" id="modalContent"></div>
         </div>
     </div>
+
+    <!-- Custom Alert Modal -->
+    <div id="alertOverlay" onclick="handleOverlayClick(event)">
+        <div class="alert-box">
+            <button class="alert-close" onclick="closeAlert()">×</button>
+
+            <i id="alertIcon" class="fa-solid fa-circle-info"></i>
+            <h3 id="alertTitle">Thông báo</h3>
+            <p id="alertMessage"></p>
+
+            <button class="btn btn-primary" onclick="handleAlertOk()">OK</button>
+        </div>
+    </div>
+
+
     <script type="module" src="script.js"></script>
-</body> 
+</body>
+
 </html>
