fix logou + confirm popup

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="vi">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,7 +47,7 @@
                     <div
                         style="display: flex; align-items: center; gap: 1rem; margin-left: 1rem; padding-left: 1rem; border-left: 2px solid var(--cold-border)">
                         <span id="userDisplay" style="color: var(--cold-border); font-weight: bold;"></span>
-                        <button onclick="window.logout()" style="background: var(--cold-main);">Đăng xuất</button>
+                        <button id="logoutBtn" style="background: var(--cold-main);">Đăng xuất</button>
                     </div>
                 </div>
             </nav>
