split auth pages (login/register)

--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B-FlixMovie</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-    <button class="btn btn-secondary" id="loginRedirect">
-        Đăng nhập
-    </button>
-
-
     <!-- Main App -->
     <div id="mainApp" style="display: block;">
         <header class="header">
@@ -38,7 +33,7 @@
         </div>
 
         <div class="movies-grid" id="moviesGrid">
-            <div class="loading">Đang tải phim...</div>
+            <div class="loading">Đang tải phim</div>
         </div>
 
         <div class="modal" id="movieModal">
@@ -60,7 +55,7 @@
     </div>
 
 
-    <script type="module" src="/js/script.js"></script>
+    <script type="module" src="./js/index.js"></script>
 </body>
 
 </html>
