fixed pages not linking, vouchers can be applied now, fix UI issues

--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
             <div class="genre-filter" id="genreFilter"></div>
         </div>
 
-        <div class="movies-grid" id="moviesGrid">
-            <div class="loading">Đang tải phim</div>
-        </div>
+        <div class="movies-grid" id="moviesGrid"></div>
 
         <div class="modal" id="movieModal">
             <div class="modal-content" id="modalContent"></div>
